crates/rsi/tests/snapshots/tui_integration__snap_file_viewer_markdown_preview_page_scroll.snap
---
source: crates/rsi/tests/tui_integration.rs
expression: scrolled_snapshot
---
 ● 0 running                                                                   default ✻ Claude
┌ rsi-preview.md [PREVIEW] ────────────────────────────────────────────────────────────────────┐
│ Section 03                                                                                   │
│ Paragraph 03 with stable preview text.                                                       │
│                                                                                              │
│ Section 04                                                                                   │
│ Paragraph 04 with stable preview text.                                                       │
│                                                                                              │
│ Section 05                                                                                   │
│ Paragraph 05 with stable preview text.                                                       │
│                                                                                              │
│ Section 06                                                                                   │
│ Paragraph 06 with stable preview text.                                                       │
│                                                                                              │
│ Section 07                                                                                   │
│ Paragraph 07 with stable preview text.                                                       │
│                                                                                              │
│ Section 08                                                                                   │
│ Paragraph 08 with stable preview text.                                                       │
│                                                                                              │
│ Section 09                                                                                   │
└ /tmp/rsi-preview.md ─────────────────────────────────────────────────────────────────────────┘
