crates/rsi/tests/snapshots/tui_integration__snap_file_viewer_trailing_space_same_frame.snap
---
source: crates/rsi/tests/tui_integration.rs
expression: snapshot
---
 ● 0 running                                                             default ✻ Claude
┌ rsi-s-input.txt [+] -- INSERT -- ──────────────────────────────────────────────────────┐
│    1 alpha·                                                                            │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└ /tmp/rsi-s-input.txt ──────────────────────────────────────────────────────────────────┘
