crates/rsi/tests/snapshots/tui_integration__snap_list_footer_no_clutter.snap
---
source: crates/rsi/tests/tui_integration.rs
assertion_line: 1186
expression: "format!(\"{snapshot:?}\")"
---
""
