crates/rsi/tests/snapshots/tui_integration__snap_prompt_manual_resize_newline_stable.snap
---
source: crates/rsi/tests/tui_integration.rs
assertion_line: 2156
expression: "support::buffer_to_snapshot(&after_newline)"
---
 ● 0
 All projects / Sessions ┌────────────────────────────────────────────────┐               1 session
  #   ∞  S  !  FUNCTION  │ cwd: /tmp/rsi-s-input  default                 │   MODEL                ▮
 RECENT ─────────────────│                                                │─────────────────────────
▌        ✓     query 0   │                                                │ ✻
                         │ line 1                                         │
                         │ line 2                                         │
                         │ line 3                                         │
                         │                                                │
                         │                                                │
                         │  INSERT                                        │
                         └────────────────────────────────────────────────┘
