crates/rsi/tests/snapshots/tui_integration__snap_prompt_scrolloff_keeps_cursor_context.snap
---
source: crates/rsi/tests/tui_integration.rs
assertion_line: 2117
expression: "support::buffer_to_snapshot(&buffer)"
---
 ● 0
 All projects / Sessions ┌────────────────────────────────────────────────┐               1 session
  #   ∞  S  !  FUNCTION  │ cwd: /tmp/rsi-s-input  default                 │   MODEL                ▮
 RECENT ─────────────────│                                                │─────────────────────────
▌        ✓     query 0   │ line 03                                        │ ✻
                         │ line 04                                        │
                         │ line 05                                        │
                         │ line 06                                        │
                         │ line 07                                        │
                         │ line 08                                        │
                         │                                                │
                         │  INSERT                                        │
                         └────────────────────────────────────────────────┘
