crates/rsi/tests/snapshots/tui_integration__snap_session_browser_240x70.snap
---
source: crates/rsi/tests/tui_integration.rs
expression: text
---
 ● 8 running                                                                                                                                                                                                                   default ✻ Claude
 All projects / Sessions                                                                                                                                                                                           ⇅ Longest idle · 22 sessions
                                                                                                          │                                                                         │
      #   ∞  S  !  FUNCTION                                          ◔     ⇄ AGE    MODEL                 │  01  ? waiting  # 02020202                        All projects › Root   │  LIVE ACTIVITY
      ! NEEDS YOU  2  ──────────────                                                                      │  ⋈ openrouter/anthropic/claude-opus-4-6  ▮▮▮▯ high                      │  ────────────────────────────────────────────────────
    ▌        ?  !  Review harness snapshots                                3  now ⋈ opus-4-6            ──│  ────────────────────────────────────────────────────────────────────   │
             ×  !  Investigate render edge                                13  now ✻ opus-4-1              │  Review harness snapshots                                               │  ⚑ QUEUE
                                                                                                          │  ! needs you                                                            │  02 × Investigate render edge                     now
      ● IN FLIGHT  8  ──────────────                                                                      │                                                                         │
             ●     Implement event seam                                    8  now ✻ sonnet-5              │  ⇄ 3   $0.01   ◷ <1m run   + 01-01 01:58   Δ just now                   │  Δ CHANGES
             ●     Browser session 05                                      8   5d ✻ sonnet-5              │  ⌂ /tmp                                                                 │  03 ● Implement event seam                        now
             ●     Browser session 06                                      8   6d ✻ sonnet-5              │                                                                         │  11 ✓ Clean fixture state                         now
             ●     Browser session 07                                      8   7d ✻ sonnet-5              │  → Choose the bounded relay policy?                                     │  02 × Investigate render edge                     now
             ●     Browser session 08                                      8   8d ✻ sonnet-5              │                                                                         │  04 ● Browser session 05                           5d
             ●     Browser session 09                                      8   9d ✻ sonnet-5              │  ? reply required                                                       │  05 ● Browser session 06                           6d
             ●     Browser session 10                                      8  10d ✻ sonnet-5              │                                                                         │  06 ● Browser session 07                           7d
             ◐     Browser session 11                                      8  11d ✻ sonnet-5              │  Policy requires your response.                                         │
                                                                                                          │                                                                         │  FLOW
      ✓ RECENT  1  ──────────────                                                                         │  ▎ Pin session list rendering with TestBackend                          │  █████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░
             ✓     Clean fixture state                                     5  now ⌂ oss:20b               │                                                                         │  ! 2   ● 8   ✓ 1   · 11   × 1
                                                                                                          │                                                                         │
      · QUIET  11  ──────────────                                                                         │                                                                         │  ────────────────────────────────────────────────────
             ■     Browser session 12                                      8  12d ✻ sonnet-5              │                                                                         │
             ✓     Browser session 13                                      8  13d ✻ sonnet-5              │                                                                         │  ● RUNNING                                          8
             ✓     Browser session 14                                      8  14d ✻ sonnet-5              │                                                                         │  ✻ claude  8   sonnet-5 ×8
             ✓     Browser session 15                                      8  15d ✻ sonnet-5              │                                                                         │
             ✓     Browser session 16                                      8  16d ✻ sonnet-5              │                                                                         │  ≡ RSID
             ✓     Browser session 17                                      8  17d ✻ sonnet-5              │                                                                         │  waiting for daemon health
             ✓     Browser session 18                                      8  18d ✻ sonnet-5              │                                                                         │
             ✓     Browser session 19                                      8  19d ✻ sonnet-5              │                                                                         │
             ✓     Browser session 20                                      8  20d ✻ sonnet-5              │                                                                         │
             ✓     Browser session 21                                      8  21d ✻ sonnet-5              │                                                                         │
             ✓     Browser session 22                                      8  22d ✻ sonnet-5              │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
      ────────────────────────────────────────────────────────────────────────────────────────────────    │                                                                         │
                                                                                                          │                                                                         │
      22/22                                                                                               │                                                                         │
                                                                                                          │                                                                         │
      ● run  ✓ done  × fail  ■ stop  ◐ start  ? wait  · arch                                              │                                                                         │
      ! you  • unread  ↺ retry  ⧗ stall  ◆ pin  ↻ rotated  ◌ ctx ?                                        │                                                                         │
      Mg lead  Pl plan  Im build  Db debug  Rv check                                                      │                                                                         │
                                                                                                          │                                                                         │
                                                                                                          │                                                                         │
