crates/rsi/tests/snapshots/tui_integration__snap_settings_context_workbench_120x40.snap
---
source: crates/rsi/tests/tui_integration.rs
expression: text
---
 ● 0
  Settings / Input & Prompts
  ─────────────────────────── ────────────────────────────────────────────────────────────────────────────────────────
    SECTIONS             21     INPUT & PROMPTS                                                          ITEMS FOCUS
                                How typing and submitting behave.
    APPEARANCE
      Theme & Colors              SETTING                              VALUE                  ACTION
      Screen                    ────────────────────────────────────────────────────────────────────────────────────
    WORKSPACE                   ▌ Submit on Enter                      [ON]                   Enter toggle → OFF
      Session List                Auto-open question panel             [OFF]                  toggle
      Transcript Defaults         Prompt compiler                      [ON]                   toggle
    ▶ Input & Prompts
    MODELS
      Model Roles                SELECTED · Submit on Enter
      API Providers              Plain Enter submits multiline text; Shift+Enter inserts a newline.
      System Prompt              Enter toggle → OFF
    SAFETY & SPEND
      Model Control
      Budgets
      Usage
    AGENT AUTOMATION
      Retries & Recovery
      Stall Detection
      Memory & Dreaming
      Orchestration
      Code Intelligence
    PROVIDERS & SANDBOXES
      Provider Isolation
      Sandbox Storage
      Claude Hooks
      Claude Skills
    INTEGRATIONS
      Message Bridges
